--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "matching-tool",
   "version": "0.1.0",
+  "author": {
+    "email": "ayobamiu@gmail.com",
+    "name": "Usman Ayoabmi",
+    "url": "https://github.com/Ayobamiu"
+  },
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
