Homepage, added wmu_gold and wmu_brown colors

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Bronco matching tool.",
-  "name": "Bronco matching tool.",
+  "short_name": "Bronco Challenge Matching Tool.",
+  "name": "Bronco Challenge Matching Tool.",
   "icons": [
     {
       "src": "favicon.ico",
