--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "homepage": "http://broncochallenge.github.io/matching-tool",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.3.7",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -16,10 +17,16 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "antd": "^5.17.3",
+    "axios": "^1.7.2",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "serve": "^14.2.3",
+    "sort-by": "^1.2.0",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
