--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
     "@types/react-dom": "^18.0.0",
     "antd": "^5.17.3",
     "axios": "^1.7.2",
+    "base-64": "^1.0.0",
     "firebase": "^10.12.1",
+    "firebase-admin": "^13.0.2",
+    "firebase-functions": "^6.2.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
@@ -58,6 +62,7 @@
     ]
   },
   "devDependencies": {
+    "@types/base-64": "^1.0.2",
     "gh-pages": "^6.1.1",
     "tailwindcss": "^3.4.3"
   }
